# memfree-sim

./: .gitignore  README.md  agent.md  pyproject.toml
benchmarks/: fk_bench.py  fk_parity.py
src/memfree_sim/: __init__.py  arm_spec.py  kinematics.py  triton_fk.py
tests/: test_edge_cases.py  test_fused_fk.py  test_reference.py
