[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memfree-sim"
version = "0.1.0"
description = "Fused differentiable kinematics kernels for large-batch robot simulation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7",
    "triton>=3.4; platform_system == 'Linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
